added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
+    <div class="shuvo">
+        <h1>my simple website</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis tempora necessitatibus cumque molestiae animi qui itaque nihil sed explicabo a similique distinctio nostrum delectus, provident officia nemo? Adipisci, modi odio.</p>
+    </div>
     
 </body>
 </html>
